--- a/hello_world/.godot/editor/project_metadata.cfg
+++ b/hello_world/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="apk"
+executable_path="E:/godot/Godot_v4.2.2-stable_win64.exe/Godot_v4.2.2-stable_win64.exe"
 
 [debug_options]
 
