--- a/hello_world/.godot/editor/editor_layout.cfg
+++ b/hello_world/.godot/editor/editor_layout.cfg
@@ -13,13 +13,13 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=255
-dock_hsplit_3=-405
+dock_hsplit_3=-662
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sprite_2d.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://fantasyhextiles_v3_borderless.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://sprite_2d.tscn")
 current_scene="res://sprite_2d.tscn"
-center_split_offset=0
+center_split_offset=-834
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
